--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
-version: "3.8"
 services:
   plone6:
-    image: plone/plone-backend:6.0.0a2-python39
+    image: plone/plone-backend:6.0.0b2
     ports:
       - "8080:8080"
     volumes:
